@@ -128,6 +128,22 @@ contains
     write(*,*) '*******************************************************************************'
     write(*,*) 'Opening file ', trim(NC%filename), ' for output; write period every',outfile%freq,' years'
 
+    ! writing meta data
+    !status = nf90_put_att(NC%id, NF90_GLOBAL, 'Conventions', "CF-1.0")
+    !call nc_errorhandle(__FILE__,__LINE__,status)
+    status = nf90_put_att(NC%id, NF90_GLOBAL,'title',trim(outfile%metadata%title))
+    call nc_errorhandle(__FILE__,__LINE__,status)
+    status = nf90_put_att(NC%id, NF90_GLOBAL,'institution',trim(outfile%metadata%institution))
+    call nc_errorhandle(__FILE__,__LINE__,status)
+    status = nf90_put_att(NC%id, NF90_GLOBAL,'source',trim(outfile%metadata%source))
+    call nc_errorhandle(__FILE__,__LINE__,status)
+    status = nf90_put_att(NC%id, NF90_GLOBAL,'history',trim(outfile%metadata%history))
+    call nc_errorhandle(__FILE__,__LINE__,status)
+    status = nf90_put_att(NC%id, NF90_GLOBAL,'references',trim(outfile%metadata%references))
+    call nc_errorhandle(__FILE__,__LINE__,status)
+    status = nf90_put_att(NC%id, NF90_GLOBAL,'comment',trim(outfile%metadata%comment))
+    call nc_errorhandle(__FILE__,__LINE__,status)
+
     ! defining dimensions
     status = nf90_def_dim(NC%id,'x0',model%general%ewn-1,NC%x0dim)
     call nc_errorhandle(__FILE__,__LINE__,status)
@@ -139,6 +155,10 @@ contains
     call nc_errorhandle(__FILE__,__LINE__,status)
     status = nf90_def_dim(NC%id,'level',model%general%upn,NC%leveldim)
     call nc_errorhandle(__FILE__,__LINE__,status)
+    if (NC%do_spot) then	 
+       status = nf90_def_dim(NC%id,'spot',size(outfile%spotx),NC%spotdim)	 
+       call nc_errorhandle(__FILE__,__LINE__,status)	 
+    end if
     status = nf90_def_dim(NC%id,'time',NF90_UNLIMITED,NC%timedim)
     call nc_errorhandle(__FILE__,__LINE__,status)
 
@@ -202,7 +222,7 @@ contains
 
     ! local variables
     integer status
-    integer up, sp
+    integer up, spot
     real(dp):: f1, f2, f3, f4, f5, f6, f7, f8
     integer :: ewnv, nsnv
 
